syntax = "proto3";
package consumer;

// Service
service kafkaConsumer {
  rpc consumer(ConsumerRequest) returns (stream ConsumerResponse) {}
}

// Request Name
message ConsumerRequest {
  string topicName=1;
  string group=2;
  int64 limit=3;
}

// Response Array
message ConsumerResponse {
  bytes data=1;
}