syntax = "proto3";
package test;
 
// Service
service TestServer {
  rpc Process(requestData) returns (responseData) {}
}

//Request
message requestData {
  string data=1;
}

// Response Array
message responseData{
  string data=1;
}
